# vae-models

./: .gitignore  README.md  pyproject.toml  requirements.txt
docs/: results.md
notebooks/: baseline.ipynb  comparison.ipynb  init.ipynb  iwae.ipynb  langevin.ipynb  latent_analysis.ipynb  vamp_prior.ipynb
notebooks/checkpoints/: iwae_final.pt  vae_final.pt  vampprior_final.pt
vae_project/: __init__.py  evaluate.py  imports.py  utils.py
vae_project/dataset/: __init__.py  mnist.py  recon.py  transforms.py  utils.py
vae_project/models/: __init__.py  blocks.py  iwae.py  langevin.py  latent_analysis.py  vae.py  vamp_prior_vae.py
vae_project/train/: __init__.py  hooks.py  losses.py  trainer.py  trainers.py
vae_project/train/hooks/: __init__.py  base.py  metrics.py  optimization.py  pbar.py  vamp_prior.py
vae_project/train/trainers/: __init__.py  base.py  special.py
