[project]
dependencies = ["torchvision", "matplotlib", "tqdm"]
name = "vae-project"
requires-python = ">= 3.12"
version = "0.1.0"
optional-dependencies = { dev = ["nbdev", "ipywidgets", "jupyter", "black"] }

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["linux-64"]

[tool.pixi.pypi-dependencies]
vae_project = { path = ".", editable = true }

[tool.pixi.tasks]

[tool.pixi.environments]
default = { solve-group = "default" }
dev = { features = ["dev"], solve-group = "default" }

[tool.black]
line-length = 90
