[project]
dependencies = ["torchvision", "matplotlib", "tqdm", "trackio>=0.10.0,<0.11", "torch-fidelity>=0.3.0,<0.4"]
name = "vae-project"
requires-python = ">= 3.12"
version = "0.1.0"
optional-dependencies = { dev = [
    "nbdev",
    "ipywidgets",
    "jupyter",
    "black",
    "pyinstrument",
] }

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["linux-64", "osx-arm64"]

[tool.pixi.pypi-dependencies]
vae_project = { path = ".", editable = true }

[tool.pixi.tasks]

[tool.pixi.environments]
default = { solve-group = "default" }
dev = { features = ["dev"], solve-group = "default" }

[tool.pixi.dependencies]
scikit-learn = ">=1.8.0,<2"

[tool.black]
line-length = 130
